Use abs_{srcdir,builddir,top_srcdir}, to avoid problems with latest autoconf.

--- a/src/clos/defsys.lsp.in
+++ b/src/clos/defsys.lsp.in
@@ -44,6 +44,6 @@
 (sbt:defsystem 
  clos
  :modules *clos-modules*
- :source-directory "@srcdir@/"
- :fasl-directory "@builddir@/clos/"
- :library-directory "@builddir@/")
+ :source-directory "@abs_srcdir@/"
+ :fasl-directory "@abs_builddir@/"
+ :library-directory "@abs_top_builddir@/")
