The calling conventions have been changed. SI::C-ARGUMENTS-LIMIT and LAMBDA-PARAMETERS-LIMIT are both 64. Up to C-ARGUMENTS-LIMIT may be passed to a function using C calling conventions. If the function is to retrieve more arguments, (for instance through a &rest variable), this can be done, but then the arguments have to be pushed on the lisp stack. This method allows us to raise the CALL-ARGUMENTS-LIMIT up to MOST-POSITIVE-FIXNUM. From a users point of view, there is no visible change, excep the fact that a function may receive more arguments.
The function apply() has been replaced with cl_apply_from_stack().
The former took a pointer to the list of arguments. The latter assumes
that the last "narg" elements on the lisp stack are the arguments of
the function.

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -63,7 +63,7 @@ install: $(HFILES)
 	ranlib $@
 
 clean:
-	$(RM) *.c $(OBJS) ../libecl.a cinit.o core a.out
+	$(RM) dpp *.c $(OBJS) ../libecl.a cinit.o core a.out
 
 # Build rules
 
