--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -82,12 +82,15 @@ install: BUILD-STAMP
 	$(INSTALL_DATA) h/config.h $(PREFIX)$(libdir)/h
 	$(INSTALL_DATA) help.doc $(PREFIX)$(libdir)
 	if (echo $(SUBDIR) | grep gc); then $(MAKE) installgc; fi
+	if (echo $(SUBDIR) | grep gmp); then $(MAKE) installgmp; fi
 	cd c; $(MAKE) PREFIX="$(PREFIX)" install
 	cd doc; $(MAKE) PREFIX="$(PREFIX)" install
 installgc:
 	$(INSTALL) -d $(PREFIX)$(libdir)/h/private
 	$(INSTALL_DATA) $(srcdir)/gc/include/*.h $(PREFIX)$(libdir)/h/
 	$(INSTALL_DATA) $(srcdir)/gc/include/private/*.h $(PREFIX)$(libdir)/h/private/
+installgmp:
+	$(INSTALL_DATA) h/gmp.h $(PREFIX)$(libdir)/h/
 
 uninstall:
 	rm -rf $(mandir)/ecl.1
