--- a/src/configure.in
+++ b/src/configure.in
@@ -43,6 +43,7 @@ AC_SUBST(bindir)
 AC_SUBST(mandir)
 AC_SUBST(infodir)
 AC_SUBST(builddir)
+AC_SUBST(libdir)
 AC_SUBST(top_srcdir)
 dnl AC_ARG_ENABLE(tk,
 dnl 	[--enable-tk            Include Tk.],
