+ The tests for the type and size of cl_fixnum have been grouped.   FIXNUM_BITS and CHAR_BIT do not rely now on "char" being 8-bit   large. + All configuration settings are now grouped in config.h. This file   has two parts, and the second one, containing flags which are only   needed during the build process, is deleted when installing ECL. + File critical.h merged into lwp.h.

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -30,7 +30,7 @@ HFILES	= ../h/config.h $(HDIR)/ecl.h $(HDIR)/ecl-cmp.h\
 	$(HDIR)/machines.h $(HDIR)/object.h $(HDIR)/cs.h $(HDIR)/stacks.h\
 	$(HDIR)/external.h $(HDIR)/eval.h\
 	$(HDIR)/number.h $(HDIR)/page.h $(HDIR)/unify.h\
-	$(HDIR)/lwp.h $(HDIR)/critical.h
+	$(HDIR)/lwp.h
 OBJS	= main.o symbol.o package.o list.o\
 	apply.o eval.o interpreter.o compiler.o disassembler.o \
 	clos.o instance.o gfun.o reference.o character.o\
@@ -57,6 +57,8 @@ all:	$(DPP) ../libecl.a cinit.o
 
 install: $(HFILES)
 	$(INSTALL_DATA) $(HFILES) $(PREFIX)$(libdir)/h/
+	sed ',-CUT-,$$d' ../h/config.h > ../h/config-install.h
+	$(INSTALL_DATA) ../h/config-install.h $(PREFIX)$(libdir)/h/config.h
 
 ../libecl.a: $(OBJS)
 	ar cr $@ $(OBJS)
