--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -129,6 +129,10 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 /* float.h for epsilons, maximum real numbers, etc			*/
 #undef HAVE_FLOAT_H
 
+/* what characters are used to mark beginning of new line		*/
+#undef ECL_NEWLINE_IS_CRLF
+#undef ECL_NEWLINE_IS_LFCR
+
 /*
  * PARAMETERS:
  */
