Detect automatically, to what characters \n is translated. For instance, under MSDOS \n -> \r\n, and under Apple, \n -> \n\r.

--- a/src/configure.in
+++ b/src/configure.in
@@ -142,6 +142,7 @@ dnl
 ECL_MAKE_ABSOLUTE_SRCDIR()
 ECL_GUESS_HOST_OS()
 ECL_PROCESS_MACHINES_H()
+ECL_LINEFEED_MODE()
 
 dnl ----------------------------------------------------------------------
 dnl		Set options
