Global variables preserving_whitespace, detect_eos_flag, escape_flag and delimiter_char removed. Function readc_stream and unreadc_stream renamed to ecl_getc and ecl_ungetc. They now have a C-like behavior, do not complain about EOF and return the special value EOF when the end of the file is reached.

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -57,7 +57,7 @@ all:	$(DPP) ../libecl.a cinit.o
 
 install: $(HFILES)
 	$(INSTALL_DATA) $(HFILES) $(PREFIX)$(libdir)/h/
-	sed ',-CUT-,$$d' ../h/config.h > ../h/config-install.h
+	sed '/-CUT-/,$$d' ../h/config.h > ../h/config-install.h
 	$(INSTALL_DATA) ../h/config-install.h $(PREFIX)$(libdir)/h/config.h
 
 ../libecl.a: $(OBJS)
