--- a/src/configure.in
+++ b/src/configure.in
@@ -31,7 +31,7 @@ exit 2;
 fi
 
 dnl Set the version number. This seems the best place to keep it.
-ECL_VERSION=0.7b
+ECL_VERSION=0.8
 AC_SUBST(ECL_VERSION)
 
 dnl Guess operating system of host. We do not allow cross-compiling.
@@ -47,9 +47,9 @@ AC_SUBST(top_srcdir)
 dnl AC_ARG_ENABLE(tk,
 dnl 	[--enable-tk            Include Tk.],
 dnl 	tk="$enable_tk")
-AC_ARG_ENABLE(clx,
- 	[--enable-clx           Include CLX.],
- 	clx="$enableval")
+dnl AC_ARG_ENABLE(clx,
+dnl 	[--enable-clx           Include CLX.],
+dnl 	clx="$enableval")
 AC_ARG_WITH(tcp,
 	[--with-tcp             Include socket interface.],
 	tcp="yes")
