--- a/src/cmp/load.lsp.in
+++ b/src/cmp/load.lsp.in
@@ -1,29 +1,29 @@
 
-(load "@srcdir@/cmpdefs")
-(load "@srcdir@/cmpmac")
-(load "@srcdir@/cmpinline")
-(load "@srcdir@/cmputil")
-(load "@srcdir@/cmptype")
-(load "@srcdir@/cmpbind")
-(load "@srcdir@/cmpblock")
-(load "@srcdir@/cmpcall")
-(load "@srcdir@/cmpcatch")
-(load "@srcdir@/cmpenv")
-(load "@srcdir@/cmpeval")
-(load "@srcdir@/cmpexit")
-(load "@srcdir@/cmpflet")
-(load "@srcdir@/cmpfun")
-(load "@srcdir@/cmpif")
-(load "@srcdir@/cmplam")
-(load "@srcdir@/cmplet")
-(load "@srcdir@/cmploc")
-(load "@srcdir@/cmpmap")
-(load "@srcdir@/cmpmulti")
-(load "@srcdir@/cmpspecial")
-(load "@srcdir@/cmptag")
-(load "@srcdir@/cmptop")
-(load "@srcdir@/cmpvar")
-(load "@srcdir@/cmpwt")
-(load "@srcdir@/cmpmain")
-(load "@srcdir@/sysfun")
-(load "@builddir@/cmp/cmpcfg.lsp")
+(load "@abs_srcdir@/cmpdefs")
+(load "@abs_srcdir@/cmpmac")
+(load "@abs_srcdir@/cmpinline")
+(load "@abs_srcdir@/cmputil")
+(load "@abs_srcdir@/cmptype")
+(load "@abs_srcdir@/cmpbind")
+(load "@abs_srcdir@/cmpblock")
+(load "@abs_srcdir@/cmpcall")
+(load "@abs_srcdir@/cmpcatch")
+(load "@abs_srcdir@/cmpenv")
+(load "@abs_srcdir@/cmpeval")
+(load "@abs_srcdir@/cmpexit")
+(load "@abs_srcdir@/cmpflet")
+(load "@abs_srcdir@/cmpfun")
+(load "@abs_srcdir@/cmpif")
+(load "@abs_srcdir@/cmplam")
+(load "@abs_srcdir@/cmplet")
+(load "@abs_srcdir@/cmploc")
+(load "@abs_srcdir@/cmpmap")
+(load "@abs_srcdir@/cmpmulti")
+(load "@abs_srcdir@/cmpspecial")
+(load "@abs_srcdir@/cmptag")
+(load "@abs_srcdir@/cmptop")
+(load "@abs_srcdir@/cmpvar")
+(load "@abs_srcdir@/cmpwt")
+(load "@abs_srcdir@/cmpmain")
+(load "@abs_srcdir@/sysfun")
+(load "@abs_builddir@/cmpcfg.lsp")
