--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -1,34 +1,34 @@
 
-(load "@srcdir@/export.lsp" :verbose t)
-(load "@srcdir@/defmacro.lsp" :verbose t)
-(load "@srcdir@/helpfile.lsp" :verbose t)
-(load "@srcdir@/evalmacros.lsp" :verbose t)
-(load "@srcdir@/module.lsp" :verbose t)
-(load "@srcdir@/autoload.lsp" :verbose t)
-(load "@srcdir@/describe.lsp" :verbose t)
-(load "@srcdir@/setf.lsp" :verbose t)
-(load "@srcdir@/predlib.lsp" :verbose t)
-(load "@srcdir@/arraylib.lsp" :verbose t)
-(load "@srcdir@/assert.lsp" :verbose t)
-(load "@srcdir@/defstruct.lsp" :verbose t)
-(load "@srcdir@/iolib.lsp" :verbose t)
-(load "@srcdir@/listlib.lsp" :verbose t)
-(load "@srcdir@/mislib.lsp" :verbose t)
-(load "@srcdir@/numlib.lsp" :verbose t)
-(load "@srcdir@/packlib.lsp" :verbose t)
-(load "@srcdir@/seq.lsp" :verbose t)
-(load "@srcdir@/seqlib.lsp" :verbose t)
-(load "@srcdir@/trace.lsp" :verbose t)
-(load "@srcdir@/ansi.lsp" :verbose t)
+(load "@abs_srcdir@/export.lsp" :verbose t)
+(load "@abs_srcdir@/defmacro.lsp" :verbose t)
+(load "@abs_srcdir@/helpfile.lsp" :verbose t)
+(load "@abs_srcdir@/evalmacros.lsp" :verbose t)
+(load "@abs_srcdir@/module.lsp" :verbose t)
+(load "@abs_srcdir@/autoload.lsp" :verbose t)
+(load "@abs_srcdir@/describe.lsp" :verbose t)
+(load "@abs_srcdir@/setf.lsp" :verbose t)
+(load "@abs_srcdir@/predlib.lsp" :verbose t)
+(load "@abs_srcdir@/arraylib.lsp" :verbose t)
+(load "@abs_srcdir@/assert.lsp" :verbose t)
+(load "@abs_srcdir@/defstruct.lsp" :verbose t)
+(load "@abs_srcdir@/iolib.lsp" :verbose t)
+(load "@abs_srcdir@/listlib.lsp" :verbose t)
+(load "@abs_srcdir@/mislib.lsp" :verbose t)
+(load "@abs_srcdir@/numlib.lsp" :verbose t)
+(load "@abs_srcdir@/packlib.lsp" :verbose t)
+(load "@abs_srcdir@/seq.lsp" :verbose t)
+(load "@abs_srcdir@/seqlib.lsp" :verbose t)
+(load "@abs_srcdir@/trace.lsp" :verbose t)
+(load "@abs_srcdir@/ansi.lsp" :verbose t)
 #+old-loop
-(load "@srcdir@/loop.lsp" :verbose t)
+(load "@abs_srcdir@/loop.lsp" :verbose t)
 #-old-loop
-(load "@srcdir@/loop2.lsp" :verbose t)
-(load "@srcdir@/defpackage.lsp" :verbose t)
-(load "@srcdir@/ffi.lsp" :verbose t)
+(load "@abs_srcdir@/loop2.lsp" :verbose t)
+(load "@abs_srcdir@/defpackage.lsp" :verbose t)
+(load "@abs_srcdir@/ffi.lsp" :verbose t)
  #+threads
-(load "@srcdir@/thread.lsp" :verbose t)
+(load "@abs_srcdir@/thread.lsp" :verbose t)
  #+tk
-(load "@srcdir@/tk-init.lsp" :verbose t)
-(load "@builddir@/lsp/config.lsp" :verbose t)
-(load "@srcdir@/top.lsp" :verbose t)
+(load "@abs_srcdir@/tk-init.lsp" :verbose t)
+(load "@abs_builddir@/config.lsp" :verbose t)
+(load "@abs_srcdir@/top.lsp" :verbose t)
