--- a/src/cmp/defsys.lsp.in
+++ b/src/cmp/defsys.lsp.in
@@ -34,8 +34,7 @@
     (cmpvar	()		()			())
     (cmpwt	()		()			())
     (cmpmain	()		()			())
-    (cmpcfg	()		()			())
-    (sysfun	()		()			())))
+    (cmpcfg	()		()			())))
 
 (sbt:defsystem 
  cmp
