--- a/src/configure.in
+++ b/src/configure.in
@@ -184,9 +184,9 @@ if test ${runtime} ; then
   AC_DEFINE(RUNTIME)
 else
   if test ${shared} = "yes" ; then
-    LSP_LIBRARIES="${LSP_LIBRARIES} cmp.so"
+    LSP_LIBRARIES="${LSP_LIBRARIES} cmp.so sysfun.lsp"
   else
-    LSP_LIBRARIES="${LSP_LIBRARIES} libcmp.a"
+    LSP_LIBRARIES="${LSP_LIBRARIES} libcmp.a sysfun.lsp"
   fi
 fi
 if test ${tk} ; then
