--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -140,6 +140,8 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #undef HAVE_ISNANF
 /* float.h for epsilons, maximum real numbers, etc			*/
 #undef HAVE_FLOAT_H
+/* select()								*/
+#undef HAVE_SELECT
 
 /* what characters are used to mark beginning of new line		*/
 #undef ECL_NEWLINE_IS_CRLF
