--- a/src/configure.in
+++ b/src/configure.in
@@ -137,6 +137,8 @@ AC_CHECK_HEADERS(float.h)
 AC_CHECK_FUNCS(nanosleep)
 AC_CHECK_FUNCS(isnanf)
 AC_CHECK_FUNCS(select)
+AC_CHECK_FUNCS(setenv)
+AC_CHECK_FUNCS(putenv)
 AC_ISC_POSIX
 
 dnl ----------------------------------------------------------------------
