Only include ffi.d when it is required. Some compilers do not like empty files.

--- a/src/configure.in
+++ b/src/configure.in
@@ -215,6 +215,7 @@ if test "${closstreams}"; then
 fi
 if test "${ffi}"; then
   AC_DEFINE(ECL_FFI)
+  EXTRA_OBJS="${EXTRA_OBJS} ffi.o"
 fi
 if test "${locative}" ; then
   EXTRA_OBJS="${EXTRA_OBJS} unify.o"
