--- a/src/configure.in
+++ b/src/configure.in
@@ -31,10 +31,11 @@ exit 2;
 fi
 
 dnl Set the version number. This seems the best place to keep it.
-ECL_VERSION=0.9
+ECL_VERSION=0.9b
 AC_SUBST(ECL_VERSION)
 
 dnl Guess operating system of host. We do not allow cross-compiling.
+AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 
 AC_SUBST(host)
@@ -66,6 +67,9 @@ AC_ARG_WITH(gmp,
 	[--with-gmp=args        Configure supplied GMP library with arguments.],
 	[gmp_flags=${withval}; local_gmp="no"],
 	gmp_flags="")
+AC_ARG_WITH(cros_config,
+	[--with-config-file=f	Supply configuration for a cross compiler.],
+	cross_config="${withval}", cross_config="`pwd`/cross_config")
 dnl AC_ARG_ENABLE(locative,
 dnl 	[--enable-locative      Include locative support.],
 dnl 	locative="$enable_locative")
@@ -91,6 +95,7 @@ AC_ARG_ENABLE(cxx,
 	[--enable-cxx           Build ECL using C++ compiler],
 	usecxx=${enableval},usecxx="no")
 
+
 ### ----------------------------------------------------------------------
 ###           Checks for programs
 ###
@@ -107,11 +112,6 @@ AC_SUBST(LSPCFLAGS)dnl		Additional flags needed to compile translated code
 AC_SUBST(CLIBS)dnl		System libraries to be linked in
 AC_SUBST(LDFLAGS)dnl		Flags for program linker
 AC_SUBST(SHARED_LDFLAGS)dnl	Flags for shared libraries linker
-AC_SUBST(architecture)dnl	Type of processor for which this is compiled
-AC_SUBST(software_type)dnl	Type of operating system
-AC_SUBST(software_version)dnl	Version number of operating system
-AC_SUBST(ecl_setjmp)dnl		Function to use for setjmp
-AC_SUBST(ecl_longjmp)dnl	Function to use for longjmp
 AC_SUBST(SHORT_SITE_NAME)dnl	Short name for the machine we built this on
 AC_SUBST(LONG_SITE_NAME)dnl	Long name for the machine we built this on
 AC_SUBST(EXTRA_OBJS)dnl		Extra *.o files to be compiled into libecl.a
@@ -131,17 +131,20 @@ dnl ----------------------------------------------------------------------
 dnl           checks for header files
 dnl
 dnl AC_CHECK_HEADERS(unistd.h stdlib.h stdarg.h string.h)
-AC_CHECK_HEADERS(sys/resource.h sys/utsname.h float.h pw.h)
-AC_CHECK_FUNCS(nanosleep alarm times isnanf select setenv putenv lstat mkstemp)
+AC_CHECK_HEADERS(sys/resource.h sys/utsname.h float.h pw.h dlfcn.h link.h\
+ ulimit.h dirent.h sys/ioctl.h)
+AC_CHECK_FUNCS(nanosleep alarm times isnanf select setenv putenv\
+ lstat mkstemp)
 AC_ISC_POSIX
 
 dnl ----------------------------------------------------------------------
 dnl		Establish some default values
 dnl
+ECL_CROSS_CONFIG()
 ECL_MAKE_ABSOLUTE_SRCDIR()
 ECL_GUESS_HOST_OS()
-ECL_PROCESS_MACHINES_H()
 ECL_LINEFEED_MODE()
+ECL_FIND_SETJMP()
 
 dnl ----------------------------------------------------------------------
 dnl		Set options
@@ -200,6 +203,7 @@ fi
 if test "${tcp}" -o "${clx}"; then
   AC_DEFINE(TCP)
   EXTRA_OBJS="${EXTRA_OBJS} tcp.o"
+  CLIBS="${CLIBS} ${TCPLIBS}"
 fi
 if test "${oldloop}"; then
   AC_DEFINE(ECL_OLD_LOOP)
@@ -240,7 +244,6 @@ dnl ----------------------------------------------------------------------
 dnl		Study the call conventions
 dnl
 ECL_STACK_DIRECTION()
-ECL_ARGS_ARRAY()
 
 dnl ---------------------------------------------------------------------
 dnl		Check the appropiate type for cl_fixnum/cl_index
@@ -262,7 +265,8 @@ dnl           checks for functions and declarations
 dnl
 dnl           checks for compiler characteristics
 dnl
-AC_C_BIGENDIAN    	   # DEFS WORDS_BIGENDIAN
+AC_C_BIGENDIAN([AC_DEFINE(WORDS_BIGENDIAN)],
+[],[AC_DEFINE(WORDS_BIGENDIAN,[/* EDIT!!! - Undefine if small endian */])])
 dnl AC_C_CONST             # DEFS const
 dnl AC_C_CHAR_UNSIGNED     # DEFS __CHAR_UNSIGNED__ if char is unsigned
 
@@ -303,7 +307,7 @@ else
    (destdir=`${PWDCMD}`; cd gmp;
      $srcdir/gmp/configure --disable-shared --prefix=$bindir \
 	--infodir=${destdir}/doc --includedir=${destdir}/h \
-        --libdir=${destdir} $gmp_flags)
+        --libdir=${destdir} --build=${build} --host=${host} $gmp_flags)
   fi
 fi
 dnl ---------------------------------------------------------------------
@@ -318,7 +322,8 @@ elif test "${local_boehm}" = "no" ; then
   if mkdir gc; then
    (destdir=`${PWDCMD}`; cd gc;
      $srcdir/gc/configure --disable-threads --disable-shared --prefix=$bindir \
-	--includedir=${destdir}/h --libdir=${destdir})
+	--includedir=${destdir}/h --libdir=${destdir} --build=${build} \
+	--host=${host})
   fi
 else
   AC_MSG_RESULT(already installed)
