--- a/src/lsp/config.lsp.in
+++ b/src/lsp/config.lsp.in
@@ -28,7 +28,7 @@ Returns the version of your ECL as a string."
 (defun machine-type ()
   "Args: ()
 Returns, as a string, the type of the machine on which ECL runs."
-  @architecture@)
+  @ARCHITECTURE@)
 
 ;; obtained from uname(2) where available
 (defun machine-instance ()
@@ -46,12 +46,12 @@ uname(2) where available."
 (defun software-type ()
   "Args: ()
 Returns, as a string, the type of the software under which ECL runs."
-  "@OS_TYPE@")
+  "@SOFTWARE_TYPE@")
 
 (defun software-version ()
   "Args: ()
 Returns, as a string, the version of the software under which ECL runs."
-  "@OS_RELEASE@")
+  "@SOFTWARE_VERSION@")
 
 ;;
 ;; * Set up some room
