--- a/src/lsp/load.lsp.in
+++ b/src/lsp/load.lsp.in
@@ -1,36 +1,38 @@
 
-(load "@abs_srcdir@/export.lsp" :verbose t)
-(load "@abs_srcdir@/defmacro.lsp" :verbose t)
-(load "@abs_srcdir@/helpfile.lsp" :verbose t)
-(load "@abs_srcdir@/evalmacros.lsp" :verbose t)
-(load "@abs_srcdir@/module.lsp" :verbose t)
-(load "@abs_srcdir@/autoload.lsp" :verbose t)
-(load "@abs_srcdir@/describe.lsp" :verbose t)
-(load "@abs_srcdir@/setf.lsp" :verbose t)
-(load "@abs_srcdir@/predlib.lsp" :verbose t)
-(load "@abs_srcdir@/arraylib.lsp" :verbose t)
-(load "@abs_srcdir@/assert.lsp" :verbose t)
-(load "@abs_srcdir@/defstruct.lsp" :verbose t)
-(load "@abs_srcdir@/iolib.lsp" :verbose t)
-(load "@abs_srcdir@/listlib.lsp" :verbose t)
-(load "@abs_srcdir@/mislib.lsp" :verbose t)
-(load "@abs_srcdir@/numlib.lsp" :verbose t)
-(load "@abs_srcdir@/packlib.lsp" :verbose t)
-(load "@abs_srcdir@/seq.lsp" :verbose t)
-(load "@abs_srcdir@/seqlib.lsp" :verbose t)
-(load "@abs_srcdir@/trace.lsp" :verbose t)
-(load "@abs_srcdir@/ansi.lsp" :verbose t)
+(load "@abs_srcdir@/export.lsp" :verbose nil)
+(load "@abs_srcdir@/defmacro.lsp" :verbose nil)
+(load "@abs_srcdir@/helpfile.lsp" :verbose nil)
+(load "@abs_srcdir@/evalmacros.lsp" :verbose nil)
+(load "@abs_srcdir@/module.lsp" :verbose nil)
+(load "@abs_srcdir@/autoload.lsp" :verbose nil)
+(load "@abs_srcdir@/describe.lsp" :verbose nil)
+(load "@abs_srcdir@/setf.lsp" :verbose nil)
+(load "@abs_srcdir@/predlib.lsp" :verbose nil)
+(load "@abs_srcdir@/arraylib.lsp" :verbose nil)
+(load "@abs_srcdir@/assert.lsp" :verbose nil)
+(load "@abs_srcdir@/defstruct.lsp" :verbose nil)
+(load "@abs_srcdir@/iolib.lsp" :verbose nil)
+(load "@abs_srcdir@/listlib.lsp" :verbose nil)
+(load "@abs_srcdir@/mislib.lsp" :verbose nil)
+(load "@abs_srcdir@/numlib.lsp" :verbose nil)
+(load "@abs_srcdir@/packlib.lsp" :verbose nil)
+(load "@abs_srcdir@/seq.lsp" :verbose nil)
+(load "@abs_srcdir@/seqlib.lsp" :verbose nil)
+(load "@abs_srcdir@/trace.lsp" :verbose nil)
+(load "@abs_srcdir@/ansi.lsp" :verbose nil)
 #+old-loop
-(load "@abs_srcdir@/loop.lsp" :verbose t)
+(load "@abs_srcdir@/loop.lsp" :verbose nil)
 #-old-loop
-(load "@abs_srcdir@/loop2.lsp" :verbose t)
-(load "@abs_srcdir@/defpackage.lsp" :verbose t)
-(load "@abs_srcdir@/ffi.lsp" :verbose t)
+(load "@abs_srcdir@/loop2.lsp" :verbose nil)
+#+cmu-format
+(load "@abs_srcdir@/format.lsp" :verbose nil)
+(load "@abs_srcdir@/defpackage.lsp" :verbose nil)
+(load "@abs_srcdir@/ffi.lsp" :verbose nil)
 #+ffi
-(load "@abs_srcdir@/ffi-objects.lsp" :verbose t)
+(load "@abs_srcdir@/ffi-objects.lsp" :verbose nil)
  #+threads
-(load "@abs_srcdir@/thread.lsp" :verbose t)
+(load "@abs_srcdir@/thread.lsp" :verbose nil)
  #+tk
-(load "@abs_srcdir@/tk-init.lsp" :verbose t)
-(load "@abs_builddir@/config.lsp" :verbose t)
-(load "@abs_srcdir@/top.lsp" :verbose t)
+(load "@abs_srcdir@/tk-init.lsp" :verbose nil)
+(load "@abs_builddir@/config.lsp" :verbose nil)
+(load "@abs_srcdir@/top.lsp" :verbose nil)
