Avoid using cl_va_list, cl_va_arg when the number of arguments is small (<32) and we know that no value will be stored on the stack.

--- a/src/h/config.h.in
+++ b/src/h/config.h.in
@@ -74,6 +74,7 @@ typedef unsigned @CL_FIXNUM_TYPE@ cl_hashkey;
 #define LAMBDA_PARAMETERS_LIMIT 64
 
 /*	Numb. of args. which can be passed using the C stack		*/
+/*	See cmplam.lsp if you change this value				*/
 #define C_ARGUMENTS_LIMIT 64
 
 /* A setjmp that does not save signals					*/
